16702 Change amount,fee... to Integer